补全详情字段并增强 client 解析

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ docs/probes/upwork_probe_*.json
 docs/probes/upwork_probe_*.json:Zone.Identifier
 docs/probes/run_*.md
 docs/probes/run_*.md:Zone.Identifier
+docs/probes/run_*.log.json
+docs/probes/run_*.log.json:Zone.Identifier
