修复详情打开与停止后重启

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Upwork Job Scout",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Best matches list+detail scraper for Upwork (local only).",
   "permissions": ["storage", "downloads", "activeTab", "scripting"],
   "host_permissions": ["https://www.upwork.com/*"],
@@ -21,6 +21,7 @@
         "overlay/overlay.css",
         "overlay/overlay.js",
         "src/core/log.js",
+        "src/core/navigation.js",
         "src/core/parser.js",
         "src/core/selectors.js",
         "src/core/storage.js"
